[package]
name = "search"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.71"
clap = { version = "3.2.25", features = ["derive"] }
directories = "4.0.1"
open = "3.2.0"
scraper = "0.13.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tantivy = "0.18.1"
walkdir = "2.3.3"
