[package]
name = "search"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
directories = "5.0.1"
open = "5.0.0"
scraper = "0.17.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tantivy = "0.20.2"
walkdir = "2.3.3"
